--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
 <head>
 	<title>Javascript Box - OOP demo</title>
+	<style type="text/css">
+		
+		svg{
+			width: -webkit-fill-available;
+			height: -webkit-fill-available;
+		}
+	</style>
 </head>
 <body>
 
@@ -40,11 +47,11 @@
 			var el = document.getElementById(html_id);
 
 			//see if the circle is going outside the browser. if it is, reverse the velocity
-			if( this.info.cx > document.body.clientWidth || this.info.cx < 0)
+			if( this.info.cx >= document.body.clientWidth || this.info.cx < 0)
 			{
 				this.info.velocity.x = this.info.velocity.x * -1;
 			}
-			if( this.info.cy > document.body.clientHeight || this.info.cy < 0)
+			if( this.info.cy >= document.body.clientHeight || this.info.cy < 0)
 			{
 				this.info.velocity.y = this.info.velocity.y * -1;
 			}
